# LLMBoost

./: .gitignore  README.md  results_final.txt
.github/workflows/: ci.yml
mlir-pass/: CMakeLists.txt
mlir-pass/include/Transforms/: CMakeLists.txt  LLMOps.td  LLMTransforms.h
mlir-pass/kernels/: CMakeLists.txt  fused_rmsnorm_linear.cu  fused_rmsnorm_linear_bf16.cu
mlir-pass/lib/Transforms/: CMakeLists.txt  FuseRMSNormLinear.cpp  LLMDialect.cpp  LLMLowering.cpp
results/: bf16_results.json  shape_sweep.json
tvm-tuning/benchmarks/: benchmark.py
tvm-tuning/scripts/: build_relax_module.py  tvm_tune.py
